--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
       <div class="mosaic">
         <div class="tile quoteTile reveal">
           <div class="quote">“Очень быстро собрали структуру и запустили сайт — стало проще объяснять ценность и собирать заявки.”</div>
-          <div class="who"><b>Отзыв клиента</b><br>Можно заменить на реальный</div>
+          <div class="who"><b>Отзыв клиента</b></div>
         </div>
 
 
@@ -1122,3 +1122,4 @@
   </script>
 
 </div>
+
