--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="/en/fast-website.html" target="_blank" rel="noopener">Fast website €150</a>
+          <a class="btn btnAccent" href="subpage.html">Fast website €150</a>
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1593,8 +1593,9 @@
           </div>
 
           <div style="margin-top:16px;">
-            <a class="btn btnAccent" href="/en/fast-website.html" target="_blank" rel="noopener">
-              Open package page
+         <a class="btn btnAccent" href="subpage.html">
+  Open package page
+
             </a>
           </div>
         </div>
@@ -1830,3 +1831,4 @@
 
 </body>
 </html>
+
