Update and rename subpage.html to fast-website.html

--- a/fast-website.html
+++ b/fast-website.html
@@ -508,7 +508,9 @@
 <body>
   <div class="header">
     <div class="headerInner">
-      <a class="brand" href="/en/" aria-label="Back to erewhile.digital">
+
+      <!-- ✅ ИЗМЕНЕНО: было href="/en/" → стало href="index.html" -->
+      <a class="brand" href="index.html" aria-label="Back to erewhile.digital">
         <img
           class="brandLogo"
           src="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770410043/logo_erewhile_o4gv8z.png"
@@ -526,9 +528,11 @@
       </nav>
 
       <div class="headerCtas">
-        <a class="btn btnOutline" href="/en/">Home</a>
+        <!-- ✅ ИЗМЕНЕНО: было href="/en/" → стало href="index.html" -->
+        <a class="btn btnOutline" href="index.html">Home</a>
         <a class="btn btnBlack" href="#order">Order for €150</a>
       </div>
+
     </div>
   </div>
 
@@ -677,5 +681,3 @@
   </script>
 </body>
 </html>
-
-
