--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,8 @@
     <div class="header">
       <div class="headerInner">
 
-        <a class="brand" href="/en/" aria-label="Erewhile Digital">
+       <a class="brand" href="index.html" aria-label="Erewhile Digital">
+
           <img
             class="brandLogo"
             src="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770410043/logo_erewhile_o4gv8z.png"
@@ -1179,7 +1180,8 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="subpage.html">Fast website €150</a>
+          <a class="btn btnAccent" href="fast-website.html">Fast website €150</a>
+
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1593,7 +1595,7 @@
           </div>
 
           <div style="margin-top:16px;">
-         <a class="btn btnAccent" href="subpage.html">
+        <a class="btn btnAccent" href="fast-website.html">
   Open package page
 
             </a>
@@ -1831,4 +1833,5 @@
 
 </body>
 </html>
+
 
