--- a/eu/index.html
+++ b/eu/index.html
@@ -856,7 +856,7 @@
       }
       .tile.quoteTile{ grid-column: 1 / 3; }
       .tile.offerTile{ grid-column: 3 / 4; background:#fff; }
-      .tile.fastTile{ grid-column: 1 / 3; background:#fff; }
+      .tile.Tile{ grid-column: 1 / 3; background:#fff; }
 
       .formGrid{ grid-template-columns: 1fr 1fr; }
       .full{ grid-column: 1 / -1; }
@@ -1011,7 +1011,7 @@
       }
 
       .mosaic.offersGrid .tile.offerTile,
-      .mosaic.offersGrid .tile.fastTile,
+      .mosaic.offersGrid .tile.Tile,
       .mosaic.offersGrid .tile{
         grid-column: auto !important;
       }
@@ -1180,7 +1180,7 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="fast-website.html">Fast website €150</a>
+          <a class="btn btnAccent" href="/fast-website.html">Fast website €150</a>
 
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
@@ -1595,7 +1595,7 @@
           </div>
 
           <div style="margin-top:16px;">
-        <a class="btn btnAccent" href="fast-website.html">
+        <a class="btn btnAccent" href="/fast-website.html">
   Open package page
 
             </a>
@@ -1833,6 +1833,7 @@
 
 </body>
 </html>
+
 
 
 
