--- a/au/index.html
+++ b/au/index.html
@@ -910,7 +910,7 @@
       }
       .tile.quoteTile{ grid-column: 1 / 3; }
       .tile.offerTile{ grid-column: 3 / 4; background:#fff; }
-      .tile.fastTile{ grid-column: 1 / 3; background:#fff; }
+      .tile.Tile{ grid-column: 1 / 3; background:#fff; }
 
 
       .formGrid{ grid-template-columns: 1fr 1fr; }
@@ -1090,7 +1090,7 @@
 
 
       .mosaic.offersGrid .tile.offerTile,
-      .mosaic.offersGrid .tile.fastTile,
+      .mosaic.offersGrid .tile.Tile,
       .mosaic.offersGrid .tile{
         grid-column: auto !important;
       }
@@ -1270,7 +1270,7 @@
           </div>
 
 
-          <a class="btn btnAccent" href="/en/fast-website.html" target="_blank" rel="noopener">Fast website $250</a>
+          <a class="btn btnAccent" href="/fast-website.html" target="_blank" rel="noopener">Fast website $250</a>
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1730,7 +1730,7 @@
 
 
           <div style="margin-top:16px;">
-            <a class="btn btnAccent" href="/en/fast-website.html" target="_blank" rel="noopener">
+            <a class="btn btnAccent" href="/fast-website.html" target="_blank" rel="noopener">
               Open package page
             </a>
           </div>
@@ -2012,3 +2012,4 @@
 </body>
 
 </html>
+
