--- a/eu/index.html
+++ b/eu/index.html
@@ -27,7 +27,7 @@
   <meta property="og:title" content="Erewhile Digital — Website Design & Development, Content, Integrations (CRM & AI)" />
   <meta property="og:description" content="Conversion-focused websites + content, analytics, CRM automation and AI integrations. A website that works as your digital ecosystem." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://erewhile.digital/en/" />
+  <meta property="og:url" content="https://erewhile.digital/eu/" />
   <meta property="og:image" content="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636275/og_d0d1z2.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -1146,7 +1146,7 @@
     <div class="header">
       <div class="headerInner">
         <!-- ✅ FIXED: brand goes to /en/ (not index.html) -->
-        <a class="brand" href="/en/" aria-label="Erewhile Digital">
+        <a class="brand" href="/eu/" aria-label="Erewhile Digital">
           <img
             class="brandLogo"
             src="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770410043/logo_erewhile_o4gv8z.png"
@@ -1174,13 +1174,13 @@
 
           <!-- Language links (hidden by CSS) -->
           <div class="langSwitch" aria-label="Language switch">
-            <a class="langLink isActive" href="/en/" hreflang="en" lang="en">EN</a>
+            <a class="langLink isActive" href="/eu/" hreflang="en" lang="en">EN</a>
             <a class="langLink" href="/lv/" hreflang="lv" lang="lv">LV</a>
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
           <!-- ✅ FIXED: point to /en/fast-website.html -->
-          <a class="btn btnAccent" href="/en/fast-website.html">Fast website €150</a>
+          <a class="btn btnAccent" href="/eu/fast-website.html">Fast website €150</a>
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1595,7 +1595,7 @@
 
           <div style="margin-top:16px;">
             <!-- ✅ FIXED: point to /en/fast-website.html -->
-            <a class="btn btnAccent" href="/en/fast-website.html">Open package page</a>
+            <a class="btn btnAccent" href="/eu/fast-website.html">Open package page</a>
           </div>
         </div>
       </div>
@@ -1828,3 +1828,4 @@
 
 </body>
 </html>
+
