--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="/en/fast-website.html" target="_blank" rel="noopener">Fast website €150</a>
+          <a class="btn btnAccent" href="/en/fast-website.html">Fast website €150</a>
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1309,7 +1309,10 @@
           <div class="caseBody">
             <div class="caseKicker">NGO website</div>
             <div class="caseTitle">Non-profit website — structure, trust, and clear actions</div>
-            <a class="caseLink" href="http://untu.ngo" target="_blank" rel="noopener">Open website <span class="arrow">→</span></a>
+            <a class="btn btnAccent" href="/en/fast-website.html">
+  Open package page
+</a>
+
           </div>
         </div>
 
@@ -1830,3 +1833,4 @@
 
 </body>
 </html>
+
