--- a/index.html
+++ b/index.html
@@ -1596,9 +1596,10 @@
           </div>
 
           <div style="margin-top:16px;">
-            <a class="btn btnAccent" href="/en/fast-website.html" target="_blank" rel="noopener">
-              Open package page
-            </a>
+        <a class="btn btnAccent" href="/en/fast-website.html">
+  Open package page
+</a>
+
           </div>
         </div>
       </div>
@@ -1833,4 +1834,5 @@
 
 </body>
 </html>
+
 
