--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="/en/fast-website.html">Fast website €150</a>
+          <a class="btn btnAccent" href="fast-website.html">Fast website €150</a>
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1309,7 +1309,7 @@
           <div class="caseBody">
             <div class="caseKicker">NGO website</div>
             <div class="caseTitle">Non-profit website — structure, trust, and clear actions</div>
-            <a class="btn btnAccent" href="/en/fast-website.html">
+            <a class="btn btnAccent" href="fast-website.html">
   Open package page
 </a>
 
@@ -1834,5 +1834,6 @@
 
 </body>
 </html>
+
 
 
