--- a/fast-website.html
+++ b/fast-website.html
@@ -8,15 +8,16 @@
   <title>Fast One-Page Website for €150 (Domain Included up to €15) — Erewhile Digital</title>
   <meta name="description" content="Order a fast, clean one-page website for €150. Mobile-ready, lead form included, and domain purchase is included up to €15. Launch quickly with Erewhile Digital." />
 
-  <link rel="canonical" href="https://erewhile.digital/en/fast-website.html" />
-  <link rel="alternate" hreflang="en" href="https://erewhile.digital/en/fast-website.html" />
-  <link rel="alternate" hreflang="x-default" href="https://erewhile.digital/en/fast-website.html" />
+  <link rel="canonical" href="https://erewhile.digital/fast-website.html" />
+<link rel="alternate" hreflang="en" href="https://erewhile.digital/fast-website.html" />
+<link rel="alternate" hreflang="x-default" href="https://erewhile.digital/fast-website.html" />
+
 
   <!-- Open Graph -->
   <meta property="og:title" content="Fast One-Page Website for €150 — Erewhile Digital" />
   <meta property="og:description" content="A clean one-page website built fast: mobile-ready, lead form included, and domain purchase included up to €15." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://erewhile.digital/en/fast-website.html" />
+  <meta property="og:url" content="https://erewhile.digital/fast-website.html" />
   <meta property="og:image" content="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636275/og_d0d1z2.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -498,7 +499,7 @@
       "@type": "Offer",
       "priceCurrency": "EUR",
       "price": "150",
-      "url": "https://erewhile.digital/en/fast-website.html",
+      "url": "https://erewhile.digital/fast-website.html",
       "description": "Fast one-page website, mobile-ready, lead form included. Domain purchase included up to €15."
     }
   }
@@ -508,7 +509,8 @@
 <body>
   <div class="header">
     <div class="headerInner">
-      <a class="brand" href="/en/" aria-label="Back to erewhile.digital">
+      <a class="brand" href="/" aria-label="Back to erewhile.digital">
+
         <img
           class="brandLogo"
           src="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770410043/logo_erewhile_o4gv8z.png"
@@ -526,7 +528,7 @@
       </nav>
 
       <div class="headerCtas">
-        <a class="btn btnOutline" href="/en/">Home</a>
+        <a class="btn btnOutline" href="/">Home</a>
         <a class="btn btnBlack" href="#order">Order for €150</a>
       </div>
     </div>
